--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,13 +1,6 @@
 version: 0.2
 
-env:
-    variables:
-        CACHE_CONTROL: "86400"
-        BUILD_FOLDER: "dist"
 phases:
-  install:
-    runtime-versions:
-        nodejs: 12
     commands:
         - echo Installing source NPM dependencies...
         - npm install
@@ -16,10 +9,8 @@ phases:
     commands:
         - echo Build started
         - ng build --prod
-        - cp server.js dist
-        - cp package.json dist
+        - cp server.js ./dist
+        - cp package.json ./dist
 artifacts:
     files:
         - 'dist/*'
-    base-directory: 'dist*'
-    discard-paths: yes
