--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,13 @@
 version: 0.2
 
+env:
+    variables:
+        CACHE_CONTROL: "86400"
+        BUILD_FOLDER: "dist"
 phases:
+  install:
+    runtime-versions:
+        nodejs: 10
     commands:
         - echo Installing source NPM dependencies...
         - npm install
@@ -9,8 +16,10 @@ phases:
     commands:
         - echo Build started
         - ng build --prod
-        - cp server.js ./dist
-        - cp package.json ./dist
+        - cp server.js dist
+        - cp package.json dist
 artifacts:
     files:
         - 'dist/*'
+    base-directory: 'dist*'
+    discard-paths: yes
