--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,7 @@ phases:
     commands:
         - echo Installing source NPM dependencies...
         - npm install
+        - echo Installing Angular CLI...
         - npm install -g @angular/cli
   build:
     commands:
