--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
     commands:
         - echo Installing source NPM dependencies...
         - npm install
-        - echo Installing Angular CLI...
+        - echo Installing Angular...
         - npm install -g @angular/cli
   build:
     commands:
@@ -18,4 +18,3 @@ artifacts:
         - dist/**/*
         - server.js
         - package.json
-        - node_modules/**/*
