--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,6 +19,7 @@ phases:
         - ng build --prod
 artifacts:
     files:
+        - .ebextensions/**/*
         - dist/**/*
         - server.js
         - package.json
