--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
     "@babel/compat-data": "^7.8.0",
+    "@stomp/ng2-stompjs": "^7.2.0",
     "express": "^4.17.1",
     "ng-zorro-antd": "^8.5.2",
     "path": "^0.12.7",
