Fix Docker configuration to just host and not install and build

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,13 @@
-node_modules
-dist
-npm-debug.log
-Dockerfile
-.dockerignore
-.git
-.gitignore
-LICENSE
-*.md
+# node_modules
+# dist
+# npm-debug.log
+# Dockerfile
+# .dockerignore
+# .git
+# .gitignore
+# LICENSE
+# *.md
+
+*
+!dist
+!nginx.conf
