--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "testheadless": "ng test --watch=false --browsers=ChromeHeadless",
-    "testdocker": "ng test --watch=false --browsers=ChromeHeadlessNoSandbox"
+    "testheadless": "ng test --watch=false --browsers=ChromeHeadless"
   },
   "private": true,
   "dependencies": {
