--- a/nginx.conf
+++ b/nginx.conf
@@ -1,49 +1,38 @@
-#user       ;
-worker_processes  1;
-#error_log  logs/error.log;
-#pid        logs/nginx.pid;
-#worker_rlimit_nofile 8192;
-
-events {
-  worker_connections  1024;
+upstream api {
+  keepalive 32;
+  server 127.0.0.1:8080 fail_timeout=0;
 }
 
-http {
-    include  /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+server {
+    server_name  logframelab.ai www.logframelab.ai;
+    location /api/ {
+        rewrite ^/api/(.*)$ /$1 break;
+	proxy_pass http://api;
+	proxy_redirect http:// https://;
+       
+        proxy_set_header   Host             $host:$server_port;
+        proxy_set_header   X-Real-IP        $remote_addr;
+        proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+        proxy_max_temp_file_size 0;
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
-
-    include  conf.d/*.conf;
-
-    map $http_upgrade $connection_upgrade {
-        default     "upgrade";
+        # Required for new HTTP-based CLI
+        proxy_http_version 1.1;
+        proxy_request_buffering off;
+        proxy_buffering off; # Required for HTTP-based CLI to work over SSL
     }
 
-    server {
-        listen        80 default_server;
-        access_log    /var/log/nginx/access.log main;
-
-        client_header_timeout 60;
-        client_body_timeout   60;
-        keepalive_timeout     60;
-#        gzipoff;
-#        gzip_comp_level4;
-#        gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-
-        # Include the Elastic Beanstalk generated locations
-        #include conf.d/elasticbeanstalk/*.conf;
-        location / {
-            proxy_pass          http://127.0.0.1:8080;
-            proxy_http_version  1.1;
-
-            proxy_set_header    Connection $connection_upgrade;
-            proxy_set_header    Upgrade $http_upgrade;
-            proxy_set_header    Host $host;
-            proxy_set_header    X-Real-IP $remote_addr;
-            proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
-        }
+    location / {
+        root   /usr/share/nginx/html;
+#	    index index.html index.htm index.html;
+        try_files $uri $uri/ /index.html;
     }
+
+
+    listen 443 ssl;
+    ssl_certificate     /etc/nginx/cert/fullchain.pem;
+    ssl_certificate_key /etc/nginx/cert/privkey.pem;
+    # ssl_certificate /etc/letsencrypt/live/www.logframelab.ai/fullchain.pem; # managed by Certbot
+    # ssl_certificate_key /etc/letsencrypt/live/www.logframelab.ai/privkey.pem; # managed by Certbot
+    # include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 }
