Add redirect conf and fix Dockerfile certificate folder

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,8 +7,8 @@ server {
     server_name  logframelab.ai www.logframelab.ai;
     location /api/ {
         rewrite ^/api/(.*)$ /$1 break;
-	proxy_pass http://api;
-	proxy_redirect http:// https://;
+        proxy_pass http://api;
+        proxy_redirect http:// https://;
        
         proxy_set_header   Host             $host:$server_port;
         proxy_set_header   X-Real-IP        $remote_addr;
@@ -35,4 +35,19 @@ server {
     # ssl_certificate_key /etc/letsencrypt/live/www.logframelab.ai/privkey.pem; # managed by Certbot
     # include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+}
+
+# redirect HTTP to HTTPS
+server {
+    if ($host = logframelab.ai) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+    if ($host = www.logframelab.ai) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+    server_name  logframelab.ai www.logframelab.ai
+    listen 80;
+    location / {
+           return 301 https://logframelab.ai$request_uri;
+   }
 }
