--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "test": "ng test",
     "test:headless": "ng test --watch=false --browsers=ChromeHeadless",
+    "test:docker": "ng test --watch=false --browsers=ChromeHeadlessNoSandbox",
     "test:coverage": "ng test --codeCoverage",
     "lint": "ng lint",
     "e2e": "ng e2e"
