Fixed CI testing

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:coverage": "ng test --codeCoverage",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "e2e:ci": "start-server-and-test start http://localhost:4200 cy:run"
+    "e2e:ci": "concurrently \"cypress run\" --kill-others \"ng serve\" --success first"
   },
   "private": true,
   "dependencies": {
@@ -45,6 +45,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.12.54",
     "codelyzer": "^5.1.2",
+    "concurrently": "^5.3.0",
     "cypress": "5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -53,7 +54,6 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
-    "start-server-and-test": "^1.11.3",
     "ts-loader": "8.0.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
