--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
+    "start-server-and-test": "^1.11.3",
     "ts-loader": "8.0.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
