--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "cy:open": "cypress open",
-    "cy:run": "cypress run",
+    "cy:run": "cypress run --config video=false screenshotOnRunFailure=false",
     "ng": "ng",
     "start:node": "node server.js",
     "start": "ng serve",
@@ -18,46 +18,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.9",
-    "@angular/common": "~9.1.9",
-    "@angular/compiler": "~9.1.9",
-    "@angular/core": "~9.1.9",
-    "@angular/forms": "~9.1.9",
-    "@angular/platform-browser": "~9.1.9",
-    "@angular/platform-browser-dynamic": "~9.1.9",
-    "@angular/router": "~9.1.9",
+    "@angular/animations": "~10.1.4",
+    "@angular/common": "~10.1.4",
+    "@angular/compiler": "~10.1.4",
+    "@angular/core": "~10.1.4",
+    "@angular/forms": "~10.1.4",
+    "@angular/platform-browser": "~10.1.4",
+    "@angular/platform-browser-dynamic": "~10.1.4",
+    "@angular/router": "~10.1.4",
     "@babel/compat-data": "^7.8.0",
-    "@briebug/cypress-schematic": "^3.3.0",
+    "@briebug/cypress-schematic": "^4.0.3",
     "@stomp/ng2-stompjs": "^7.2.0",
     "express": "^4.17.1",
-    "ng-zorro-antd": "^9.3.0",
+    "ng-zorro-antd": "^10.0.0",
     "path": "^0.12.7",
-    "rxjs": "~6.5.5",
-    "tslib": "^1.13.0",
-    "zone.js": "~0.10.2"
+    "rxjs": "~6.6.3",
+    "tslib": "^2.0.1",
+    "zone.js": "~0.11.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.12",
-    "@angular/cli": "^9.1.12",
-    "@angular/compiler-cli": "^9.1.12",
-    "@angular/language-service": "^9.1.12",
-    "@cypress/webpack-preprocessor": "5.4.5",
+    "@angular-devkit/build-angular": "^0.1001.4",
+    "@angular/cli": "^10.1.4",
+    "@angular/compiler-cli": "^10.1.4",
+    "@angular/language-service": "^10.1.4",
+    "@cypress/webpack-preprocessor": "5.4.6",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.55",
-    "codelyzer": "^5.1.2",
-    "cypress": "5.0.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
+    "@types/node": "^14.11.2",
+    "codelyzer": "^6.0.1",
+    "cypress": "5.3.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~6.0.0",
     "karma": "^5.2.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "start-server-and-test": "^1.11.3",
-    "ts-loader": "8.0.3",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.8.3"
+    "ts-loader": "8.0.4",
+    "ts-node": "~9.0.0",
+    "tslint": "~6.1.3",
+    "typescript": "~4.0.3"
   }
 }
