Update packages and fix cypress configuration

--- a/package.json
+++ b/package.json
@@ -18,33 +18,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.1.4",
-    "@angular/common": "~10.1.4",
-    "@angular/compiler": "~10.1.4",
-    "@angular/core": "~10.1.4",
-    "@angular/forms": "~10.1.4",
-    "@angular/platform-browser": "~10.1.4",
-    "@angular/platform-browser-dynamic": "~10.1.4",
-    "@angular/router": "~10.1.4",
-    "@babel/compat-data": "^7.8.0",
-    "@briebug/cypress-schematic": "^4.0.3",
+    "@angular/animations": "^10.1.6",
+    "@angular/common": "^10.1.6",
+    "@angular/compiler": "^10.1.6",
+    "@angular/core": "^10.1.6",
+    "@angular/forms": "^10.1.6",
+    "@angular/platform-browser": "^10.1.6",
+    "@angular/platform-browser-dynamic": "^10.1.6",
+    "@angular/router": "^10.1.6",
+    "@babel/compat-data": "^7.12.1",
+    "@briebug/cypress-schematic": "^4.2.3",
     "@stomp/ng2-stompjs": "^7.2.0",
     "express": "^4.17.1",
-    "ng-zorro-antd": "^10.0.0",
+    "ng-zorro-antd": "^10.0.2",
     "path": "^0.12.7",
     "rxjs": "~6.6.3",
-    "tslib": "^2.0.1",
-    "zone.js": "~0.11.1"
+    "tslib": "^2.0.3",
+    "zone.js": "^0.11.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1001.4",
-    "@angular/cli": "^10.1.4",
-    "@angular/compiler-cli": "^10.1.4",
-    "@angular/language-service": "^10.1.4",
+    "@angular-devkit/build-angular": "^0.1001.7",
+    "@angular/cli": "^10.1.7",
+    "@angular/compiler-cli": "^10.2.0",
+    "@angular/language-service": "^10.2.0",
     "@cypress/webpack-preprocessor": "5.4.6",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^14.11.2",
+    "@types/node": "^14.14.2",
     "codelyzer": "^6.0.1",
     "cypress": "5.3.0",
     "jasmine-core": "~3.6.0",
@@ -54,7 +54,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
-    "start-server-and-test": "^1.11.3",
+    "start-server-and-test": "^1.11.5",
     "ts-loader": "8.0.4",
     "ts-node": "~9.0.0",
     "tslint": "~6.1.3",
