--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "client",
   "version": "0.0.1",
   "scripts": {
-    "cy:open": "cypress open",
-    "cy:run": "cypress run --config video=false screenshotOnRunFailure=false",
+    "cy:open": "CHOKIDAR_USEPOLLING=1 cypress open",
+    "cy:run": "CHOKIDAR_USEPOLLING=1 cypress run --config video=false screenshotOnRunFailure=false",
     "ng": "ng",
     "start:node": "node server.js",
     "start": "ng serve",
@@ -14,18 +14,18 @@
     "test:coverage": "ng test --codeCoverage",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "e2e:ci": "start-server-and-test start http://localhost:4200 cy:run"
+    "e2e:ci": "CHOKIDAR_USEPOLLING=1 start-server-and-test start http://localhost:4200 cy:run"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.1.6",
-    "@angular/common": "^10.1.6",
-    "@angular/compiler": "^10.1.6",
-    "@angular/core": "^10.1.6",
-    "@angular/forms": "^10.1.6",
-    "@angular/platform-browser": "^10.1.6",
-    "@angular/platform-browser-dynamic": "^10.1.6",
-    "@angular/router": "^10.1.6",
+    "@angular/animations": "^10.2.0",
+    "@angular/common": "^10.2.0",
+    "@angular/compiler": "^10.2.0",
+    "@angular/core": "^10.2.0",
+    "@angular/forms": "^10.2.0",
+    "@angular/platform-browser": "^10.2.0",
+    "@angular/platform-browser-dynamic": "^10.2.0",
+    "@angular/router": "^10.2.0",
     "@babel/compat-data": "^7.12.1",
     "@briebug/cypress-schematic": "^4.2.3",
     "@stomp/ng2-stompjs": "^7.2.0",
@@ -37,8 +37,8 @@
     "zone.js": "^0.11.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1001.7",
-    "@angular/cli": "^10.1.7",
+    "@angular-devkit/build-angular": "^0.1002.0",
+    "@angular/cli": "^10.2.0",
     "@angular/compiler-cli": "^10.2.0",
     "@angular/language-service": "^10.2.0",
     "@cypress/webpack-preprocessor": "5.4.6",
@@ -46,7 +46,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^14.14.2",
     "codelyzer": "^6.0.1",
-    "cypress": "5.3.0",
+    "cypress": "5.4.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~6.0.0",
     "karma": "^5.2.1",
