--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,7 +15,7 @@ http {
     sendfile    on;
     tcp_nopush  on;
     tcp_nodelay on;
-    keepalive_timeout 10;
+    keepalive_timeout 600;
     send_timeout 10;
 
     map $http_upgrade $connection_upgrade {
@@ -54,10 +54,9 @@ http {
 
             # Required for new HTTP-based CLI
             proxy_http_version 1.1;
+            proxy_request_buffering off;
+            proxy_buffering off; # Required for HTTP-based CLI to work over SSL
 
-            # WebSocket
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection $connection_upgrade;
         }
     }
 }
