--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -54,10 +54,10 @@ http {
 
             # Required for new HTTP-based CLI
             proxy_http_version 1.1;
-            proxy_request_buffering off;
-            proxy_buffering off; # Required for HTTP-based CLI to work over SSL
 
+            # WebSocket
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
         }
     }
 }
-
