--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -52,6 +52,9 @@ http {
             proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
             proxy_max_temp_file_size 0;
 
+            # Set Upstream read timeout
+            proxy_read_timeout 600;
+
             # Required for new HTTP-based CLI
             proxy_http_version 1.1;
 
