--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,11 +27,17 @@ http {
         keepalive 32;
         server server:8080 fail_timeout=0;
     }
+    server {
+ 	    listen 80 default_server;
+	    server_name _;
+    	return 301 https://$host$request_uri;
+    }
 
     server {
 
         listen 443 ssl;
         listen [::]:443;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
         ssl_certificate /etc/nginx/certs/cert.pem;
         ssl_certificate_key /etc/nginx/certs/priv.key;
         server_tokens   off;
@@ -51,6 +57,7 @@ http {
             proxy_set_header   X-Real-IP        $remote_addr;
             proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
             proxy_max_temp_file_size 0;
+            add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
             # Set Upstream read timeout
             proxy_read_timeout 600;
